# Lispkit

./: CMakeLists.txt  README.md
src/: cell.c  compiler.lisp  compiler.secd-obj  lispkit.h  main.c  secd.c  sexpr.c  symbol.c  tests.c
tests/: append.lisp  compiler-tests.lisp  member.lisp  secd-tests.lisp  sum.lisp
